[package]
name = "rust_wfa"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
debug = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "validate"
path = "src/validate.rs"

[[bin]]
name = "validate_concurrent"
path = "src/validate_concurrent.rs"

[[bin]]
name = "bench_manual"
path = "src/bench_manual.rs"

[dependencies]
rand = "0.8.5"
num_cpus = "1.13.1"
clap =  { version = "3.1.6", features = ["derive"] }
