[package]
name = "rust_wfa"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of the wavefront sequence alignment algorithm."
homepage = "https://github.com/ostnam/rust-wfa"
repository = "https://github.com/ostnam/rust-wfa"
categories = ["algorithms", "command-line-utilities"]
readme = "README.md"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "validate"
path = "src/validate.rs"

[[bin]]
name = "validate_score_matches_alignment"
path = "src/validate_score_matches_alignment.rs"

[[bin]]
name = "bench_manual"
path = "src/bench_manual.rs"

[[bench]]
name = "bench_wfa"
harness = false

[dependencies]
rand = "0.8.5"
num_cpus = "1.13.1"
clap =  { version = "3.1.6", features = ["derive"] }
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.3"
