[package]
name = "rust_wfa"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Rust implementation of the wavefront sequence alignment algorithm."
homepage = "https://github.com/ostnam/rust-wfa"
repository = "https://github.com/ostnam/rust-wfa"
categories = ["algorithms", "command-line-utilities"]
readme = "README.md"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "validation"
path = "src/validation.rs"

[[bench]]
name = "bench_wfa"
harness = false

[dependencies]
clap =  { version = "3.1.6", features = ["derive"] }
num_cpus = "1.13.1"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
criterion = "0.3"
